force-app/main/default/objects/SOV_Payment_Application__c/SOV_Payment_Application__c.object-meta.xml
<CustomObject>
    <description>This is object is the equivalent of the G702 Payment Application.</description>
    <label>BT Payment Application - G702</label>
    <nameField>
        <label>Payment App Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT Payment Applications - G702</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>