force-app/main/default/objects/SOV_Payment_Application__c/fields/Invoice_AP__c.field-meta.xml
<CustomField>
    <fullName>Invoice_AP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice (AP)</label>
    <referenceTo>Account_Payable_Clone__c</referenceTo>
    <relationshipName>Payment_Applications_G702</relationshipName>
    <type>Lookup</type>
</CustomField>