force-app/main/default/objects/SOV_Payment_Application__c/fields/Owner_Account__c.field-meta.xml
<CustomField>
    <fullName>Owner_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Payment_Applications_G702</relationshipName>
    <type>Lookup</type>
</CustomField>